--- a/src/components/infoBox/InfoBox.scss
+++ b/src/components/infoBox/InfoBox.scss
@@ -12,6 +12,9 @@
   color: #fff;
   transform: translateY(0);
   transition: all 0.3s;
+  // border-left: 5px solid;
+  // border-bottom: 5px solid;
+  border-radius: 10px;
 
   // background-color: green;
 
@@ -19,6 +22,8 @@
     cursor: pointer;
     // border: 3px solid #fff;
     transform: translateY(-5px);
+    border-left: 5px solid;
+    border-bottom: 5px solid;
   }
 
   .info-icon {
